--- a/src/views/pages/class/task.ejs
+++ b/src/views/pages/class/task.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <%- include("../../components/classroom-sidebar.ejs"), { classId } %>
+  <%- include("../../components/classroom-sidebar.ejs", { classId }) %>
   <main class="sm:ml-64 p-6 space-y-6">
     <div class="bg-background-50 shadow-md rounded-lg p-6 space-y-4">
       <h1 id="task-name" class="text-2xl md:text-3xl font-semibold mb-2">Task Name</h1>
