--- a/src/views/pages/class/classroom.ejs
+++ b/src/views/pages/class/classroom.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <%- include("../../components/classroom-sidebar.ejs"), { classId } %>
+  <%- include("../../components/classroom-sidebar.ejs", { classId }) %>
   <main class="sm:ml-64 p-6">
     <h1 class="text-3xl font-semibold mb-4">Welcome back, <span id="user-name">User</span>!</h1>
     <p class="mb-6 text-lg">Here’s a quick overview of your classroom activities.</p>
