--- a/src/views/pages/class/new-task.ejs
+++ b/src/views/pages/class/new-task.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <%- include("../../components/classroom-sidebar.ejs"), { classId } %>
+  <%- include("../../components/classroom-sidebar.ejs", { classId }) %>
   <main class="sm:ml-64 p-6">
     <h1 class="text-3xl font-semibold mb-6">Create New Task</h1>
 
