--- a/src/views/pages/class/task-print.ejs
+++ b/src/views/pages/class/task-print.ejs
@@ -3,11 +3,12 @@
 
 <head>
   <%- include("../../components/head.ejs") %>
+  <%- include("../../components/libraries.ejs", { desmosApiKey }) %>
   <title>MPC Lab | Print Task</title>
 </head>
 
 <body>
-  <%- include("../../components/classroom-sidebar.ejs"), { classId } %>
+  <%- include("../../components/classroom-sidebar.ejs", { classId }) %>
   <main class="sm:ml-64 p-6 flex flex-col sm:flex-row h-screen">
     <section class="w-full sm:w-1/3 bg-background-50 rounded-lg shadow-md overflow-hidden sm:overflow-auto h-full sm:mr-6 mb-6 sm:mb-0 p-4">
       <h1 id="task-name" class="text-2xl font-semibold mb-4">Task Name</h1>
