--- a/src/views/pages/class/task-print.ejs
+++ b/src/views/pages/class/task-print.ejs
@@ -29,6 +29,16 @@
         </div>
 
         <div class="mb-4">
+          <label class="block text-sm font-medium text-gray-700">Display School Name</label>
+          <input id="display-school-name" type="text" class="p-3 border border-gray-300 rounded-md w-full mt-1" placeholder="Enter school name" />
+        </div>
+
+        <div class="mb-4">
+          <label class="block text-sm font-medium text-gray-700">Display Teacher Name</label>
+          <input id="display-teacher-name" type="text" class="p-3 border border-gray-300 rounded-md w-full mt-1" placeholder="Enter teacher name" />
+        </div>
+
+        <div class="mb-4">
           <label class="block text-sm font-medium text-gray-700">Display Student ID</label>
           <label class="inline-flex items-center mt-1">
             <input id="display-student-id" type="checkbox" checked class="toggle-checkbox appearance-none w-10 h-5 bg-gray-300 rounded-full checked:bg-green-500 transition-all duration-200 relative">
@@ -45,9 +55,17 @@
         </div>
 
         <div class="mb-4">
-          <label class="block text-sm font-medium text-gray-700">Display Page Numbers</label>
+          <label class="block text-sm font-medium text-gray-700">Display Title Page</label>
           <label class="inline-flex items-center mt-1">
-            <input id="display-page-numbers" type="checkbox" checked class="toggle-checkbox appearance-none w-10 h-5 bg-gray-300 rounded-full checked:bg-green-500 transition-all duration-200 relative">
+            <input id="display-title-page" type="checkbox" checked class="toggle-checkbox appearance-none w-10 h-5 bg-gray-300 rounded-full checked:bg-green-500 transition-all duration-200 relative">
+            <span class="ml-3">Enable</span>
+          </label>
+        </div>
+
+        <div class="mb-4">
+          <label class="block text-sm font-medium text-gray-700">Two Column Layout</label>
+          <label class="inline-flex items-center mt-1">
+            <input id="two-column-layout" type="checkbox" checked class="toggle-checkbox appearance-none w-10 h-5 bg-gray-300 rounded-full checked:bg-green-500 transition-all duration-200 relative">
             <span class="ml-3">Enable</span>
           </label>
         </div>
