--- a/src/views/components/problems-printer.ejs
+++ b/src/views/components/problems-printer.ejs
@@ -13,9 +13,11 @@
       margin: 1cm;
     }
 
+    html,
     body {
       font-family: 'Times New Roman', Times, serif;
       margin: 0;
+      padding: 0;
     }
 
     body>* {
@@ -34,21 +36,12 @@
       page-break-after: always;
       text-align: center;
       padding: 4rem 0;
-    }
-
-    .title-page>h1 {
-      font-size: 2rem;
-      margin: 0.5rem 0;
-    }
-
-    .title-page>p {
-      font-size: 1.25rem;
-      margin: 0.5rem 0;
+      margin: 0;
     }
 
     .title-page>.school {
       font-size: 3.75rem;
-      margin: 1.5rem 0;
+      margin: 0 auto 1rem;
     }
 
     .title-page>.title {
@@ -84,6 +77,7 @@
     }
 
     .problem-section {
+      page-break-after: always;
       column-gap: 2rem;
       margin-bottom: 2rem;
       padding: 0;
@@ -126,6 +120,10 @@
 
     .problem-placeholder {
       height: 12rem;
+    }
+
+    .graph-container {
+      page-break-inside: avoid;
     }
 
     .task-footer {
